// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionDetail /> should not render icons when [canModify=false] 1`] = `
<div>
  <ViewHeader
    title="foo"
  >
    <ViewHeader__ViewHeaderTitle>
      foo
      <ViewHeader__ViewHeaderIcons />
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          foo-file
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
  />
  <Connect(RemoveSubtraction)
    id="foo"
  />
</div>
`;

exports[`<SubtractionDetail /> should render 1`] = `
<div>
  <ViewHeader
    title="foo"
  >
    <ViewHeader__ViewHeaderTitle>
      foo
      <ViewHeader__ViewHeaderIcons>
        <Icon
          color="orange"
          faStyle="fas"
          fixedWidth={false}
          name="pencil-alt"
          onClick={[Function]}
        />
      </ViewHeader__ViewHeaderIcons>
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          foo-file
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
  />
  <Connect(RemoveSubtraction)
    id="foo"
  />
</div>
`;

exports[`<SubtractionDetail /> should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<SubtractionDetail /> should render not found on request error 1`] = `<NotFound />`;

exports[`<SubtractionDetail /> should render pending message when subtraction is not ready 1`] = `
<LoadingPlaceholder
  message="Subtraction is still being imported"
/>
`;

exports[`<SubtractionDetail /> should render remove button when there are no linked samples 1`] = `
<div>
  <ViewHeader
    title="foo"
  >
    <ViewHeader__ViewHeaderTitle>
      foo
      <ViewHeader__ViewHeaderIcons>
        <Icon
          color="orange"
          faStyle="fas"
          fixedWidth={false}
          name="pencil-alt"
          onClick={[Function]}
        />
        <Icon
          color="red"
          faStyle="fas"
          fixedWidth={false}
          name="trash"
          onClick={[MockFunction]}
        />
      </ViewHeader__ViewHeaderIcons>
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          foo-file
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
  />
  <Connect(RemoveSubtraction)
    id="foo"
  />
</div>
`;
